<resources>
    <string-array name="status_sidang">
        <item>Lulus</item>
        <item>Lulus Bersyarat</item>
        <item>Tidak Lulus</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Finpro</string>
    <string name="app_name_android">Finpro - Android</string>
    <string name="app_name_long">Finpro - Final Project Management System</string>
    <string name="app_name_subtitle">Final Project Management System</string>
    <string name="validate_tanggal">Tanggal Harus Di isi</string>
    <string name="validate_telp_valid">No Telepon Tidak Valid</string>
    <string name="validate_telp_jumlah_lebih">No Telepon Lebih dari 12 digit</string>
    <string name="validate_telp_jumlah_kurang">No Telepon Kurang dari 7 digit</string>
    <string name="validate_telp_sudah_ada">No Sudah di Pakai</string>
    <string name="validate_email">Email Tidak Valid</string>
    <string name="validate_email_ada">Email Sudah di Pakai</string>
    <string name="validate_tidak_lebih_100">Tidak Boleh Lebih dari 100</string>
    <string name="validate_tidak_lebih_16">Tidak Boleh Lebih dari 16</string>
    <string name="validate_no_connection">Tidak ada koneksi internet</string>
    <string name="title_koor_prodi">Koordinator Prodi</string>
    <string name="title_koor_lak">Koordinator LAK</string>
    <string name="title_judulpa_pengajuan">Pengajuan Mandiri</string>
    <string name="title_bimbingan">Bimbingan</string>
    <string name="title_monev">Monev</string>
    <string name="title_sidang">Sidang</string>
    <string name="title_profil">Profil</string>
    <string name="title_informasi">Informasi</string>
    <string name="title_judulta">Judul Tugas Akhir</string>
    <string name="title_ta">Tugas Akhir</string>
    <string name="title_judultainggris">Judul Tugas Akhir Inggris</string>
    <string name="title_judulpakategori">Kategori Judul Proyek Akhir</string>
    <string name="title_judulpa_pendek">Judul PA</string>
    <string name="title_judulpa_dosen">Judul Dosen</string>
    <string name="title_judulpa_dosen_tambah">Tambah Judul Proyek Akhir</string>
    <string name="title_judulpa_mahasiswa">Judul Mahasiswa</string>
    <string name="title_mahasiswa">Mahasiswa</string>
    <string name="title_mahasiswa_ta">Mahasiswa Tugas Akhir</string>
    <string name="title_tolak">Tolak</string>
    <string name="title_setuju">Setuju</string>
    <string name="title_pengajuan_judulpa">Pengajuan Judul PA</string>
    <string name="title_informasi_detail">Detail Informasi</string>
    <string name="title_informasi_tambah">Tambah Informasi</string>
    <string name="title_bimbingan_detail">Detail Bimbingan</string>
    <string name="title_monev_detail">Detail Monev</string>
    <string name="title_keluar">Keluar</string>
    <string name="title_list_bimbingan">Bimbingan</string>
    <string name="title_list_monev">Monev</string>
    <string name="title_mahasiswa_detail">Detail Mahasiswa</string>
    <string name="title_pemetaan_detail">Detail Pemetaan Monev</string>
    <string name="title_bimbingan_tambah">Bimbingan Mahasiswa</string>
    <string name="title_monev_tambah">Monev Mahasiswa</string>
    <string name="title_pemberitahuan">Pemberitahuan</string>
    <string name="title_informasi_ubah">Ubah Informasi</string>
    <string name="title_judulpa_detail">Detail Judul Proyek Akhir</string>
    <string name="title_bimbingan_ubah">Ubah Bimbingan</string>
    <string name="title_monev_ubah">Ubah Monev</string>
    <string name="title_judulpa_dosen_ubah">Ubah Judul Proyek Akhir Dosen</string>
    <string name="title_profil_ubah">Ubah Profil</string>
    <string name="title_kontak_dosen">No Telepon</string>
    <string name="title_dosen_detail">Detail Dosen</string>
    <string name="title_tugasakhir_detail">Detail Tugas Akhir</string>
    <string name="title_tugasakhir">Tugas Akhir</string>
    <string name="title_tambah_dosen">Tambah Dosen</string>
    <string name="title_tambah_pemetaan">Tambah Pemetaan Monev</string>
    <string name="title_dosen_ubah">Ubah Dosen</string>
    <string name="title_mahasiswa_tambah">Tambah Mahasiswa</string>
    <string name="title_plotting_tambah">Tambah Plotting</string>
    <string name="title_tambah_pembimbing">Tambah Pembimbing</string>
    <string name="title_mahasiswa_ubah">Ubah Mahasiswa</string>
    <string name="title_email_dosen">Email</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_dosen">Dosen</string>
    <string name="title_kelompok_mahasiswa_detail">Detail Kelompok</string>
    <string name="title_review_monev">Review Monev</string>
    <string name="title_nilai_clo_1">Nilai CLO 1</string>
    <string name="title_nilai_clo_2">Nilai CLO 2</string>
    <string name="title_nilai_clo_3">Nilai CLO 3</string>
    <string name="title_komponen_clo_1"><strong>1. Kemampuan Analisis</strong>\n2. Sistematika dan Tata Bahasa\n3. Sistem Perujukan\n4. Koherensi Pengerjaan TA\n5. Perancangan TA
    </string>
    <string name="title_komponen_clo_2">1. Penggunaan Media dan Materi\n2. Interpersonal Skills\n3. Sistematis dan Logis
    </string>
    <string name="title_komponen_clo_3">1. Perangkat Lunak\n2. Prototipe\n3. Model dan Simulasi atau Konfigurasi Sistem\n4. Dokumentasi
    </string>
    <string name="title_deskripsi_clo_1">Mampu membuat karya tulis ilmiah yang mengkaji atau menerapkan konsep ilmu pengetahuan/teknologi bidang informatika dan komputer berdasarkan kaidah, tata cara dan etika ilmiah.</string>
    <string name="title_deskripsi_clo_2">Mampu mengkomunikasikan dan berargumen secara lisan terkait solusi/gagasan/desain hasil kajian ilmu pengetahuan/teknologi bidang informatika dan komputer.</string>
    <string name="title_deskripsi_clo_3">Mampu membuat produk yang mengkaji atau menerapkan ilmu pengetahuan/teknologi bidang informatika dan komputer untuk menghasilkan solusi dari suatu permasalahan.</string>
    <string name="title_deskripsi_nilai">*Komponen nilai hanya berisi [ A , AB , B , BC , C , D , E ]</string>
    <string name="title_kategori_monev">Kategori Monev</string>
    <string name="title_kategori_judul_pa">Kategori Judul PA</string>
    <string name="title_pemetaan_monev">Pemetaan Monev</string>
    <string name="title_monev_mahasiswa">Monev Mahasiswa</string>
    <string name="title_sidang_tambah">Tambah Nilai Sidang</string>
    <string name="title_sidang_ubah">Ubah Nilai Sidang</string>
    <string name="title_masukkan_review_sidang">Masukkan Review Sidang</string>
    <string name="title_arsip_judul">Arsip Judul</string>
    <string name="title_arsip_judul_detail">Detail Arsip Judul</string>
    <string name="title_tentang_kami">Tentang Kami</string>
    <string name="title_monev_reviewer">Reviewer Monev</string>
    <string name="title_jadwal_kegiatan">Jadwal Kegiatan</string>
    <string name="title_select_file">Pilih file</string>
    <string name="title_jadwal_kegiatan_ubah">Ubah Jadwal Kegiatan</string>
    <string name="title_jadwal_kegiatan_tambah">Tambah Jadwal Kegiatan</string>
    <string name="title_jadwal_kegiatan_detail">Detail Jadwal Kegiatan</string>
    <string name="title_siap_sidang">Mahasiswa Siap Sidang</string>
    <string name="title_batas_bimbingan">Batas Bimbingan</string>
    <string name="title_batas_reviewer">Batas Reviewer</string>
    <string name="title_kuota_dosen">Kuota Dosen</string>
    <string name="title_variable">Variable</string>
    <string name="title_value">Value</string>
    <string name="button_click_masuk">Masuk</string>
    <string name="button_click_simpan">Simpan</string>
    <string name="button_click_tambah_judul">Tambah Judul</string>
    <string name="button_click_tambah_mahasiswa">Tambah Mahasiswa</string>
    <string name="button_click_tambah_plotting">Tambah Plotting</string>
    <string name="button_click_tambah_jadwal">Tambah Jadwal</string>
    <string name="button_click_ubah_jadwal">Ubah Jadwal</string>
    <string name="button_click_ubah_mahasiswa">Ubah Mahasiswa</string>
    <string name="button_click_tambah_monev">Tambah Monev</string>
    <string name="button_click_tambah_bimbingan">Tambah Bimbingan</string>
    <string name="button_click_tambah_info">Tambah Informasi</string>
    <string name="button_click_ubah_informasi">Ubah Informasi</string>
    <string name="button_click_tambah_dosen">Tambah Dosen</string>
    <string name="button_click_ubah_dosen">Ubah Dosen</string>
    <string name="button_click_tambah_sidang">Tambah Nilai Sidang</string>
    <string name="button_click_ubah_sidang">Ubah Nilai Sidang</string>
    <string name="button_click_ubah_bimbingan">Ubah Bimbingan</string>
    <string name="button_proyek_akhir_selesai">Proyek Akhir Selesai</string>
    <string name="button_click_tambah_jadwal_kegiatan">Tambah Jadwal Kegiatan</string>
    <string name="button_click_ubah_jadwal_kegiatan">Ubah Jadwal Kegiatan</string>
    <string name="dummyLong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam veniam similique voluptates odit, ipsum laborum architecto distinctio harum, provident fugiat praesentium ex quod dolores laudantium aliquid quidem placeat incidunt vitae!</string>
    <string name="dummy">Dummy</string>
    <string name="dummy_mahasiswa_nim">6706160014</string>
    <string name="dummy_mahasiswa_nama">Ikhsan Ramadhan</string>
    <string name="dummy_mahasiswa_kelompok">Seven Primavera</string>
    <string name="dummy_pa_judul">Finpro - Mobile Based Final Project Management System</string>
    <string name="dummy_anggota_kelompok_1">Muh. Faisal Amir</string>
    <string name="menu_informasi">Informasi</string>
    <string name="menu_mahasiswa">Mahasiswa</string>
    <string name="menu_dosen">Dosen</string>
    <string name="menu_plotting_pembimbing">Plotting Pembimbing</string>
    <string name="menu_sk_ta">SK TA</string>
    <string name="menu_tentang_kami">Tentang Kami</string>
    <string name="menu_jadwal_kegiatan">Jadwal Kegiatan</string>
    <string name="menu_group_manajemen_ta">Manajemen Tugas Akhir</string>
    <string name="hint_email_dosen">Masukkan Email</string>
    <string name="hint_angkatan_mahasiswa">Masukkan Angkatan Mahasiswa</string>
    <string name="hint_review_bimbingan">Masukkan Review Bimbingan</string>
    <string name="hint_review_sidang">Masukkan Review Sidang</string>
    <string name="hint_nim_mahasiswa">Masukkan NIM Mahasiswa</string>
    <string name="hint_nama_mahasiswa">Masukkan Nama Mahasiswa</string>
    <string name="hint_kontak_mahasiswa">Masukkan Kontak Mahasiswa</string>
    <string name="hint_tanggal_bimbingan">Masukkan Tanggal Bimbingan</string>
    <string name="hint_nama_kegiatan">Masukkan Nama Kegiatan</string>
    <string name="hint_tgl_mulai">Masukkan Tanggal Mulai</string>
    <string name="hint_tgl_akhir">Masukkan Tanggal Berakhir</string>
    <string name="text_status_sidang">Status Sidang</string>
    <string name="text_review_bimbingan">Review Bimbingan</string>
    <string name="text_tanggal_bimbingan">Tanggal Bimbingan</string>
    <string name="text_tanggal_mulai">Tanggal Mulai</string>
    <string name="text_nama_kegiatan">Nama Kegiatan</string>
    <string name="text_tanggal_akhir">Tanggal Berakhir</string>
    <string name="text_angkatan">Angkatan</string>
    <string name="text_nama_mahasiswa">Mahasiswa</string>
    <string name="text_nim_mahasiswa">Nim Mahasiswa</string>
    <string name="text_review_sidang">Review Sidang</string>
    <string name="text_notifikasi">Pemberitahuan</string>
</resources>