<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_menu_dosen"
        android:icon="@drawable/ic_nav_dosen"
        android:title="@string/menu_dosen" />

    <item
        android:id="@+id/nav_menu_mahasiswa"
        android:icon="@drawable/ic_nav_mahasiswa"
        android:title="@string/menu_mahasiswa" />

    <item
        android:id="@+id/nav_menu_informasi"
        android:icon="@drawable/ic_nav_informasi"
        android:title="@string/menu_informasi" />

    <item android:title="@string/menu_group_manajemen_ta">
        <menu>
            <item
                android:id="@+id/nav_menu_plotting"
                android:icon="@drawable/ic_nav_pemetaan_reviewer"
                android:title="@string/menu_plotting_pembimbing"/>

            <item
                android:id="@+id/nav_menu_skta"
                android:icon="@drawable/ic_nav_judul_pa"
                android:title="@string/menu_sk_ta"/>

        </menu>
    </item>

</menu>