<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_menu_mhs_informasi"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:iconTint="@color/colorTextWhite"
        android:title="@string/title_informasi"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_menu_mahasiswa"
        android:icon="@drawable/ic_nav_mahasiswa"
        android:iconTint="@color/colorTextWhite"
        android:title="@string/title_mahasiswa"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_menu_mhs_jadwal_kegiatan"
        android:icon="@drawable/ic_nav_jadwal_kegiatan"
        android:iconTint="@color/colorTextWhite"
        android:title="@string/menu_jadwal_kegiatan"
        app:showAsAction="ifRoom"/>

</menu>