<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="presenter"
            type="org.d3ifcool.finpro.core.presenters.JadwalPresenter" />
    </data>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_big_16dp">

            <ImageView
                android:background="@drawable/ic_date"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="@dimen/dimen_profil_photo"
                android:layout_height="@dimen/dimen_profil_photo"
                android:layout_marginVertical="@dimen/dimen_big_super_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/dummy"/>

            <TextView
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/text_nama_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/et_nama_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_medium_8dp"
                android:drawablePadding="@dimen/dimen_big_16dp"
                android:paddingVertical="@dimen/dimen_big_16dp"
                android:paddingEnd="@dimen/dimen_big_16dp"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:text="@={presenter.nama}"
                android:hint="@string/hint_nama_kegiatan"/>

            <TextView
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/text_tanggal_mulai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/et_tanggal_mulai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_medium_8dp"
                android:drawableEnd="@drawable/ic_date"
                android:drawablePadding="@dimen/dimen_big_16dp"
                android:paddingVertical="@dimen/dimen_big_16dp"
                android:paddingEnd="@dimen/dimen_big_16dp"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:clickable="false"
                android:focusable="false"
                android:text="@={presenter.tgl_mulai}"
                android:hint="@string/hint_tgl_mulai"
                android:cursorVisible="false"/>

            <TextView
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/text_tanggal_akhir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/et_tanggal_akhir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_medium_8dp"
                android:drawableEnd="@drawable/ic_date"
                android:drawablePadding="@dimen/dimen_big_16dp"
                android:paddingVertical="@dimen/dimen_big_16dp"
                android:paddingEnd="@dimen/dimen_big_16dp"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:clickable="false"
                android:focusable="false"
                android:text="@={presenter.tgl_akhir}"
                android:hint="@string/hint_tgl_akhir"
                android:cursorVisible="false"/>

            <Button
                android:layout_marginTop="@dimen/dimen_big_super_24dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/act_koor_info_button_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_click_tambah_jadwal"
                android:onClick="@{()->presenter.buttonCreate()}"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/box_border_button_primary"/>

        </LinearLayout>

    </ScrollView>
</layout>